// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Inline Newsletter Puff renders loading state state 1`] = `
<body>
  <div>
    <div
      class="sc-htpNat sc-ifAKCX iWYiTB"
    >
      <div
        class="sc-htpNat sc-bZQynM fcQclH"
      >
        <div
          class="sc-htpNat sc-htoDjs bnLiNW"
        >
          <div
            class="sc-gzVnrw TDlzj"
          />
          <div
            class="sc-gzVnrw TDlzj"
          />
          <div
            class="sc-gzVnrw TDlzj"
          />
        </div>
      </div>
      <div
        class="sc-htpNat sc-iwsKbI cuimXU"
      >
        <div
          class="sc-bxivhb sc-gqjmRU imXojB"
        >
          <div
            class="sc-bxivhb sc-gZMcBi kRYdQT"
          >
            Politics. Explained.
            : 
          </div>
          Sign up to receive our brilliant Red Box newsletter, Matt Chorley\`s poke at politics delivered every weekday morning at 8am. 
          <div
            class="sc-htpNat sc-VigVT cSaWjg"
          >
            <button
              class="sc-bwzfXH gHDjoa"
            >
              One-click sign-up
            </button>
          </div>
        </div>
        <div
          class="sc-htpNat sc-VigVT iWOUWL"
        >
          <button
            class="sc-bdVaJa qlAqK"
          >
            One-click sign-up
          </button>
        </div>
      </div>
    </div>
  </div>
</body>
`;

exports[`Inline Newsletter Puff renders null when is already subscribed 1`] = `
<body>
  <div />
</body>
`;

exports[`Inline Newsletter Puff renders placeholder when loading 1`] = `
<body>
  <div>
    <div
      class="sc-htpNat sc-ifAKCX kVAWuv"
      style="height: 257px;"
    >
      <div
        class="tc-view__TcView-nuazoi-0 fPjBcr"
        height="100%"
        style="align-items: center; background-color: rgb(237, 237, 237); bottom: 0px; justify-content: center; left: 0px; position: absolute; right: 0px; top: 0px; z-index: 0; border-radius: 0;"
        width="100%"
      >
        <svg
          height="auto"
          style="max-width: 25%; max-height: 50%;"
          version="1.1"
          viewBox="145 50 108 120"
          width="100%"
        >
          <g
            fill="none"
            fill-rule="evenodd"
            stroke="none"
            stroke-width="1"
          >
            <path
              d="M211.26076,54 L211.231367,54 L147.67512,54 L145,85.7081465 L146.922096,86.4489102 C146.922096,86.4489102 164.867589,68.1355181 168.301115,65.0001546 C171.728017,61.8689133 174.237132,61.0885763 176.436179,60.3527593 C180.998206,59.169681 185.977937,59.2150255 185.977937,59.2150255 L186.109581,59.2150255 L186.109581,156.560932 L169.259886,164.473953 L169.259886,166 L228.735147,166 L228.735147,164.473953 L211.889177,156.560932 L211.889177,59.2150255 L212.01751,59.2150255 C212.01751,59.2150255 216.992272,59.169681 221.558854,60.3527593 C223.757072,61.0885763 226.266601,61.8689133 229.691848,65.0001546 C233.130341,68.1355181 251.071695,86.4489102 251.071695,86.4489102 L253,85.7081465 L250.317842,54 L211.270695,54 L211.242545,54"
              fill="#FFFFFF"
            />
          </g>
        </svg>
      </div>
    </div>
  </div>
</body>
`;

exports[`Inline Newsletter Puff renders signup state 1`] = `
<body>
  <div>
    <div
      class="sc-htpNat sc-ifAKCX iWYiTB"
    >
      <div
        class="sc-htpNat sc-iwsKbI cuimXU"
      >
        <div
          class="sc-bxivhb sc-gqjmRU imXojB"
        >
          <div
            class="sc-bxivhb sc-gZMcBi kRYdQT"
          >
            Politics. Explained.
            : 
          </div>
          Sign up to receive our brilliant Red Box newsletter, Matt Chorley\`s poke at politics delivered every weekday morning at 8am. 
          <div
            class="sc-htpNat sc-VigVT cSaWjg"
          >
            <button
              class="sc-bwzfXH gHDjoa"
            >
              One-click sign-up
            </button>
          </div>
        </div>
        <div
          class="sc-htpNat sc-VigVT iWOUWL"
        >
          <button
            class="sc-bdVaJa qlAqK"
          >
            One-click sign-up
          </button>
        </div>
      </div>
    </div>
  </div>
</body>
`;

exports[`Inline Newsletter Puff renders signup view when not already subscribed 1`] = `
<body>
  <div>
    <div
      class="sc-htpNat sc-ifAKCX iWYiTB"
    >
      <div
        class="sc-htpNat sc-iwsKbI cuimXU"
      >
        <div
          class="sc-bxivhb sc-gqjmRU imXojB"
        >
          <div
            class="sc-bxivhb sc-gZMcBi kRYdQT"
          >
            Politics. Explained.
            : 
          </div>
          Sign up to receive our brilliant Red Box newsletter, Matt Chorley\`s poke at politics delivered every weekday morning at 8am. 
          <div
            class="sc-htpNat sc-VigVT cSaWjg"
          >
            <button
              class="sc-bwzfXH gHDjoa"
            >
              One-click sign-up
            </button>
          </div>
        </div>
        <div
          class="sc-htpNat sc-VigVT iWOUWL"
        >
          <button
            class="sc-bdVaJa qlAqK"
          >
            One-click sign-up
          </button>
        </div>
      </div>
    </div>
  </div>
</body>
`;
